# cli

./: README.md  hello.json
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/my-lib/: Cargo.toml
crates/my-lib/src/: error.rs  lib.rs
