[package]
name = "wapc-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
env_logger = "0.9.0"
log = "0.4.16"
my-lib = { path = "../my-lib" }
rmp-serde = "1.1.0"
serde_json = "1.0.81"
structopt = "0.3.26"
